argocd/apps/heimdall/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-deployment
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      containers:
      - name: heimdall
        image: linuxserver/heimdall
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: "/config/keys"
          subPath: "heimdall/keys"
          name: appdata
        - mountPath: "/config/log"
          subPath: "heimdall/log"
          name: appdata
        - mountPath: "/config/nginx"
          subPath: "heimdall/nginx"
          name: appdata
        - mountPath: "/config/php"
          subPath: "heimdall/php"
          name: appdata
        - mountPath: "/config/www"
          subPath: "heimdall/www"
          name: appdata

---
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
spec:
  selector:
    app: heimdall
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: heimdall-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: heimdall.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
  - host: heimdall.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
